--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,11 @@ h6,
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/abot-hero.webp) center center no-repeat;
+    background-size: cover;
+}
+.page-header1 {
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/gallery-hero.png) center center no-repeat;
     background-size: cover;
 }
 
@@ -353,6 +357,43 @@ h6,
 .service-item:hover .btn {
     width: 140px;
 }
+.service-item1 .bg-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    border: 2px solid #2078a4;
+}
+
+.service-item1 .service-text {
+    background: var(--light);
+    transition: .5s;
+    border: 1px solid #2078a4;
+}
+
+.service-item1:hover .service-text {
+    background: #2078a4;
+}
+
+
+
+.service-item1:hover * {
+    color: #FFFFFF;
+}
+
+
+.service-item2{
+    position: relative;
+    width: 100%;
+    padding: 2rem;
+
+    
+    
+}
+
+
+
 
 
 /*** Project ***/
@@ -368,6 +409,9 @@ h6,
 .project .nav .nav-link.active h3 {
     color: #FFFFFF !important;
 }
+
+
+
 
 
 /*** Team ***/
@@ -550,4 +594,18 @@ h6,
 
 .footer .copyright a:hover {
     color: var(--primary);
+}
+
+.menu-item2 {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+    /* padding: 20px; */
+    /* width: 30%; */
+    /* overflow: hidden; */
+    transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    margin: 10px;
+}
+.text-center{
+    align-items: center;
 }
