--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,10 @@ h6,
     background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/gallery-hero.png) center center no-repeat;
     background-size: cover;
 }
+.page-header2 {
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/bed.hero.jpg) center center no-repeat;
+    background-size: cover;
+}
 
 .breadcrumb-item+.breadcrumb-item::before {
     color: var(--light);
