--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,73 @@ h6,
     vertical-align: middle;
     margin-left: 8px;
 }
+.faq {
+    margin-bottom: 20px;
+}
+.question {
+    cursor: pointer;
+    
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    position: relative;
+    background-color: #2078a4;
+    color: white;
+    font-weight: 600;
+    font-size: 18px;
+    
+}
+.answer {
+    display: none;
+    padding: 10px;
+    border: 1px solid #a49999;
+    border-radius: 5px;
+    margin-top: 5px;
+    color: black;
+ 
+}
+.plus::after {
+    content: "+";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.minus::after {
+    content: "-";
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.answer.active {
+    display: block;
+}
+.whatsapp {
+    position: fixed;
+    bottom: 10px;
+    left: 13px;
+    z-index: 999;
+}
 
+.whatsapp i {
+    font-size: 40px;
+    color:
+        white;
+    background-color: #2078a4;
+    padding: 8px;
+    border-radius: 50%;
+    box-shadow: 2px 3px 4px rgba(32, 120, 164, 255);
+}
+
+.whatsapp:hover i {
+    color: #000;
+    background-color:
+        #2078a4;
+}
+.gallery .size_img2{
+    object-fit: cover;
+}
 .navbar .navbar-nav .nav-link {
     margin-right: 30px;
     padding: 30px 0;
