--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #B78D65;
+    --primary: #2078a4;
     --light: #F8F8F8;
     --dark: #252525;
 }
