--- a/css/style.css
+++ b/css/style.css
@@ -407,7 +407,7 @@ transition: transform 1s all ease-in-out;
 .feature-img {
     position: relative;
     height: 100%;
-    min-height: 400px;
+    min-height: 350px;
 }
 
 .about-img img,
@@ -420,7 +420,7 @@ transition: transform 1s all ease-in-out;
 
 .about-img img:last-child,
 .feature-img img:last-child {
-    margin: 20% 0 0 40%;
+    margin: 25% 0 0 40%;
 }
 
 .about-img::before,
@@ -738,3 +738,25 @@ transition: transform 1s all ease-in-out;
 .text-center{
     align-items: center;
 }
+.videos .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 50px;
+}
+.videos .container .video {
+    height: 300px;
+    width: 300px;
+    
+    background-color: #2078a4;
+}
+.videos .container .video video {
+    width: 100%;
+    height: 100%;
+    border: 3px solid orange;
+}
+.videos .work-videos {
+    text-transform: uppercase;}
