--- a/css/style.css
+++ b/css/style.css
@@ -208,11 +208,11 @@ h6,
 .design .col-lg-2{
     display: grid;
     place-items: center;
-transition: transform 1s all ease-in-out;
+
 }
 .design .col-lg-2:hover img{
   transform: scale(1.15);
-
+  transition: 1s all ease;
 }
 .design img{
     max-width: 100%;
