--- a/css/style.css
+++ b/css/style.css
@@ -228,17 +228,23 @@ h6,
     object-fit: cover;
 }
 .navbar .navbar-nav .nav-link {
-    margin-right: 30px;
-    padding: 30px 0;
+    margin-right: 10px;
+    /* padding: 10px 0; */
     color: var(--dark);
     font-weight: 500;
     text-transform: uppercase;
     outline: none;
+    /* border: 2px solid var(--primary); */
+   /* box-shadow:inset 5px 5px 10px var(--primary); */
 }
-
+.navbar .navbar-nav .nav-link i{
+    margin-right: 5px;
+}
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: var(--light);
+    background-color:var(--primary);
+
 }
 
 .navbar.sticky-top {
